# sudoku-solver

./: .gitignore  .replit  README.md  main.py  pyproject.toml
.github/workflows/: run-tests.yml
src/: main.py
src/sudoku_solver/: __init__.py  board.py  logic.py  tui.py  ui.py
sudoku_solver/: board.py  logic.py  ui.py  utils.py
tests/: test_gui_harness.py  test_logic.py  test_ui.py
