[tool.poetry]
name = "sudoku-solver"
version = "0.1.0"
description = ""
authors = ["Rob L<solarisin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
beartype = "^0.20.2"
numpy = "^2.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
